--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,18 @@
 			</plugin>
 
 			<plugin>
+
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.18.1</version>
 				<configuration>
-					<printSummary>true</printSummary>
+					<forkCount>0</forkCount>
+					<suiteXmlFiles>
+						<suiteXmlFile>C:\Users\Athira Ramachandran\eclipse-workspace\SauceDemo\src\main\resources\com\sauce\qa\runner\testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
-
 			</plugin>
+
 		</plugins>
 	</build>
 	<dependencies>
