--- a/test-output/old/Sauce Demo App Test Automation Suite/Sauce Demo App Test Automation Suite1.properties
+++ b/test-output/old/Sauce Demo App Test Automation Suite/Sauce Demo App Test Automation Suite1.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Sauce Demo App Test Automation Suite][SuiteResult context=Sauce Demo App Test Automation Suite1]
+[SuiteResult context=Sauce Demo App Test Automation Suite][SuiteResult context=Sauce Demo App Test Automation Suite1][SuiteResult context=Sauce Demo App Test Automation Suite2]
