added checkout class

--- a/src/main/java/com/sauce/qa/config/config.properties
+++ b/src/main/java/com/sauce/qa/config/config.properties
@@ -7,4 +7,7 @@ productName=Sauce Labs Fleece Jacket
 menuoption= about
 addtocartproducts=Sauce Labs Backpack,Sauce Labs Bike Light,Sauce Labs Fleece Jacket
 removefromcart=Sauce Labs Backpack
-removefromYourCart=	Sauce Labs Bike Light			
+removefromYourCart=	Sauce Labs Bike Light
+firstname=Robert
+lastname=John
+postalcode=dy99jz			
