--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 				<configuration>
 					<forkCount>0</forkCount>
 					<suiteXmlFiles>
-						<suiteXmlFile>C:\Users\Athira Ramachandran\eclipse-workspace\SauceDemo\src\main\resources\com\sauce\qa\runner\testng.xml</suiteXmlFile>
+						<suiteXmlFile>C:\Users\Athira
+							Ramachandran\eclipse-workspace\SauceDemo\src\main\resources\com\sauce\qa\runner\testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
@@ -46,6 +47,14 @@
 		</plugins>
 	</build>
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -94,7 +103,7 @@
 			<artifactId>openxml4j</artifactId>
 			<version>1.0-beta</version>
 		</dependency>
-	
+
 
 		<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 		<dependency>
